# rust-next

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  README.md  next.config.js  package.json  tsconfig.json  wasm.d.ts
app/: layout.tsx  page.tsx
app/lib/: api.ts
app/wasm/: page.tsx
jfiles/src/: build.just  justfile  run.just  test.just
src/api/: create.rs  env.rs  greet.rs  hello.rs  mod.rs  search.rs
src/server/: mod.rs  route_builder.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
